learning/nginx-ingress/ingress-template.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostname.zircon.local # the DNS hostname
  annotations:
spec:
  ingressClassName: nginx # kctl get ingressclass
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-ops-view
            port:
              number: 8080
# This section is only required if TLS is to be enabled for the Ingress
#tls:
#  - hosts:
#       - www.example.com
#       secretName: example-tls
